[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/platform_metroidvania asset pack v1.01/miscellaneous sprites/trap_spikes_anim_strip_7.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Animation Pack/Energy ball/EnergyBall.png" type="Texture" id=2]
[ext_resource path="res://Scripts/FireBallSpitter.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.5, 3.5 )

[sub_resource type="Animation" id=6]
resource_name = "FireBallEffect"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.5, 46 )

[node name="FireBallSpitter" type="Node2D" groups=["Deadly"]]
position = Vector2( 442, 356 )
script = ExtResource( 3 )

[node name="FireBall" type="Area2D" parent="." groups=["Deadly"]]
position = Vector2( 212, 1 )
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireBall"]
position = Vector2( 89.5, 0.999992 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="FireBall"]
position = Vector2( 91, 0.999992 )
scale = Vector2( 0.161024, 0.199219 )
texture = ExtResource( 2 )
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="FireBall"]
autoplay = "FireBallEffect"
anims/FireBallEffect = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="SpitterSprite" type="Sprite" parent="."]
position = Vector2( 131, 1 )
rotation = 1.5708
texture = ExtResource( 1 )
hframes = 7
frame = 1

[node name="Position2D" type="Position2D" parent="SpitterSprite"]
position = Vector2( -0.000366211, -91 )
rotation = 1.5708

[node name="FireBallEnd" type="Area2D" parent="."]
position = Vector2( 28, 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireBallEnd"]
position = Vector2( -71, 0 )
shape = SubResource( 4 )

[connection signal="area_entered" from="FireBallEnd" to="." method="_on_FireBallEnd_area_entered"]
